--- a/auth/src/main/resources/static/index.html
+++ b/auth/src/main/resources/static/index.html
@@ -2,7 +2,8 @@ Hello World!
 
 <ul>
     <li><a href="http://localhost:8080">Home</a></li>
-    <li><a href="http://localhost:8080/login">Login</a></li>
+    <li><a href="http://localhost:8080/sign-in">Login</a></li>
+    <li><a href="http://localhost:8080/other">Other</a></li>
     <li><a href="http://localhost:9090/api/dummy">Dummy Service</a></li>
     <li><a href="http://localhost:8080/api/logout">Logout</a></li>
 </ul>
